# transactionify

./: .dx.yaml  .gitignore  CONTRIBUTING.md  EVALUATION.md  README.md  catalog-info.yaml  cdk.json  docker-compose.yml  openapi.yaml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.cdk.json  tsconfig.json
.changeset/: README.md
.docker/: .env.local.example  localstack-init.sh  seed_dynamodb.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: integration.yml  pr.yml
.kiro/specs/golden-path/: design.md  requirements.md  tasks.md
.kiro/steering/: golden-path.md
demo/: act1_adoption.sh  reset.sh
docs/: DEMO.md  DORA.md  GOVERNANCE.md  LOCAL-ENV.md  PRE-MERGE-SETUP.md  RFC-template.md  audit-trail.md
docs/ADR/: 0001-golden-path.md  0002-rfc-process.md  template.md
docs/adapters/: clojure.md  go.md  python.md  typescript.md
docs/api/: 01-create-account.bru  02-create-payment.bru  03-get-balance.bru  04-list-transactions.bru  README.md  transactionify.bru
docs/api/environments/: local.bru  staging.bru
golden-path-tickets/: GP-000-workspace-foundation.yaml  GP-001-shared-schemas.yaml  GP-002-cli-foundation.yaml  GP-002b-dx-branch-pr.yaml  GP-003-dx-init.yaml  GP-004-dx-check.yaml  GP-005-framework-foundation.yaml  GP-006-runtime-adapter.yaml  GP-007-workflow-generator.yaml  GP-008-governance.yaml  GP-009a-transactionify-config.yaml  GP-009c-dogfood-governance.yaml  GP-009d-local-env.yaml  GP-010-narrative.yaml  GP-013-dora-aggregator.yaml  NOTE.md  README.md
lib/: transactionify-stack.ts
scripts/: evaluate.sh  pre-dispatch-check.sh  regenerate-workflows.js  regenerate-workflows.ts  run-workspace-script.sh
scripts/demo/: act2_failure_recovery.sh  closing_telemetry.sh  preflight.sh
scripts/demo/expected-output/: README.md  act1-governance-dryrun.json  act1-init.json  closing-dora-human.txt  closing-dora.json
src/python/: requirements.txt
src/python/transactionify/handlers/api/rest/account/create/: main.py
src/python/transactionify/handlers/api/rest/balance/get/: main.py
src/python/transactionify/handlers/api/rest/payment/create/: main.py
src/python/transactionify/handlers/api/rest/transaction/list/: main.py
src/python/transactionify/handlers/authorizer/: main.py
src/python/transactionify/handlers/provisioning/: main.py
src/python/transactionify/services/: account.py  api_key.py  balance.py  payment.py  transaction.py
src/python/transactionify/tools/aws/dynamodb/: __init__.py
src/python/transactionify/tools/generators/: __init__.py  uuid.py
src/python/transactionify/tools/response/: __init__.py
src/python/transactionify/tools/validators/: __init__.py  uuid.py
test/: README.md
test/unit/src/python/: pytest.ini  requirements.txt
test/unit/src/python/handlers/: test_authorizer.py  test_provisioning.py
test/unit/src/python/handlers/api/rest/account/create/: __init__.py  test_main.py
test/unit/src/python/handlers/api/rest/balance/get/: test_main.py
test/unit/src/python/handlers/api/rest/payment/create/: test_main.py
test/unit/src/python/handlers/api/rest/transaction/list/: test_main.py
test/unit/src/python/services/: test_account.py  test_api_key.py  test_balance.py  test_payment.py  test_transaction.py
test/unit/src/python/tools/generators/: test_uuid.py
test/unit/src/python/tools/validators/: test_uuid.py  test_uuid_properties.py
tests/integration/: test_governance_applied.py  test_local_env.sh
tests/workspace/: test_workspace_health.sh
